Assets: Fix video progress not showing

--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -13,7 +13,7 @@ $font-body: 'Roboto' !default
 $font-headings: 'Lato' !default
 $font-size: 14px !default
 $font-size-xs: .75rem
-$font-size-xxs: .65rem
+$font-size-xxs: .6rem
 
 $color-text: #4d4e53 !default
 $color-text-dark: $color-text !default
